# command-center

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  README.md  create_mcp.md  do-the-thing.md  init.md  pyproject.toml  recon-workflow.md
.do-the-thing/: do-the-thing-phase-1.md  do-the-thing-phase-2.md  do-the-thing-phase-4.md  do-the-thing-phase-5.md  do-the-thing-phase-6.md  do-the-thing-phase-7.md  do-the-thing-phase-8.md  do-the-thing-phase-9.md
.do-the-thing/.specify/memory/: constitution.md
.do-the-thing/.specify/scripts/ps/: check-prerequisites.ps1  common.ps1  setup-plan.ps1  update-agent-context.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  enhancement.yml  feature_request.yml
.github/workflows/: release.yml  sync-board.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh  generate-release-notes.sh
commands/: init.md
rules/: HOMELAB_cluster.md  HOMELAB_foundational_rules.md  homelab-reference.md
scripts/: bootstrap.sh
specs/004-homelab-recon-network-tests/: plan.md  spec.md  tasks.md
specs/004-homelab-recon-network-tests/checklists/: requirements.md
specs/005-homelab-recon-upgrade/: plan.md  spec.md  tasks.md
specs/005-homelab-recon-upgrade/checklists/: requirements.md
specs/1-add-gemini-cli-support/: plan.md  spec.md  tasks.md
specs/1-add-gemini-cli-support/checklists/: requirements.md
specs/2-gemini-cli-toml-format/: plan.md  spec.md  tasks.md
specs/2-gemini-cli-toml-format/checklists/: requirements.md
specs/3-gemini-cli-packaging/: plan.md  spec.md  tasks.md
specs/3-gemini-cli-packaging/checklists/: requirements.md
src/command_center/: __init__.py
src/command_center/assets/.do-the-thing/: do-the-thing-appendix.md  do-the-thing-phase-3.md
src/command_center/assets/.do-the-thing/.specify/scripts/ps/: create-new-feature.ps1
src/command_center/assets/commands/: do-the-thing.md  homelab-action.md  homelab-maintenance-issue-template.md  homelab-recon.md  homelab-troubleshoot.md
src/command_center/assets/rules/: HOMELAB_access.md  HOMELAB_cluster.md  HOMELAB_network.md  homelab-reference.md
src/command_center/assets/scripts/: homelab-maintenance-issue.py  homelab-nas-check.sh  homelab-network-check.sh  network-test-pod.yaml  recon.sh
src/command_center/assets/templates/: homelab-maintenance-issue-template.md  homelab-maintenance-issue.schema.yaml  homelab-troubleshoot-report-template.md  homelab-troubleshoot-report.md  homelab-troubleshoot-report.schema.yaml
tests/reports/: 004-homelab-recon-network-tests-2026-01-29.md  005-homelab-recon-upgrade-2026-01-31.md  1-add-gemini-cli-support-2025-12-16.md  2-gemini-cli-toml-format-2025-12-16.md  3-gemini-cli-packaging-2025-12-16.md
