[project]
name = "command-center"
version = "1.1.0"
description = "Command-Center: Global workflow commands for AI coding assistants. Bootstrap /do-the-thing, /commit, and /init to Opencode and Antigravity."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brimdor"}
]
keywords = ["ai", "workflow", "opencode", "antigravity", "sdd", "spec-driven-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
cmdctl = "command_center:main"

[project.urls]
Homepage = "https://github.com/brimdor/command-center"
Repository = "https://github.com/brimdor/command-center"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/command_center"]

[tool.hatch.build.targets.wheel.force-include]
# Commands (workflow files)
"commands/do-the-thing.md" = "command_center/assets/commands/do-the-thing.md"
"commands/commit.md" = "command_center/assets/commands/commit.md"
"commands/init.md" = "command_center/assets/commands/init.md"
"commands/create_mcp.md" = "command_center/assets/commands/create_mcp.md"
"commands/homelab-action.md" = "command_center/assets/commands/homelab-action.md"
"commands/homelab-recon.md" = "command_center/assets/commands/homelab-recon.md"
"commands/homelab-troubleshoot.md" = "command_center/assets/commands/homelab-troubleshoot.md"
# Rules (reference files)
"rules/HOMELAB_foundational_rules.md" = "command_center/assets/rules/HOMELAB_foundational_rules.md"
"rules/HOMELAB_network.md" = "command_center/assets/rules/HOMELAB_network.md"
"rules/HOMELAB_cluster.md" = "command_center/assets/rules/HOMELAB_cluster.md"
"rules/HOMELAB_access.md" = "command_center/assets/rules/HOMELAB_access.md"
"rules/homelab-reference.md" = "command_center/assets/rules/homelab-reference.md"
# Support directory
".do-the-thing" = "command_center/assets/.do-the-thing"

[tool.hatch.build.targets.sdist]
include = [
    "commands/**",
    "rules/**",
    ".do-the-thing/**",
    "src/**",
    "scripts/**",
    "README.md",
]
