[project]
name = "command-center"
version = "1.1.0"
description = "Command-Center: Global workflow commands for AI coding assistants. Bootstrap /do-the-thing, /commit, and /init to Opencode and Antigravity."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brimdor"}
]
keywords = ["ai", "workflow", "opencode", "antigravity", "sdd", "spec-driven-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
cmdctl = "command_center:main"

[project.urls]
Homepage = "https://github.com/brimdor/command-center"
Repository = "https://github.com/brimdor/command-center"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/command_center"]

# Assets are now inside src/command_center/assets/ and included automatically
# No force-include needed since they're part of the package structure

[tool.hatch.build.targets.sdist]
include = [
    "src/**",
    "scripts/**",
    "README.md",
]
